# mp3-bt-sc-i2s-oled

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: BT_a2db.h  BT_a2dp.cpp  BT_a2dp.h  CMakeLists.txt  Fifo.cpp  Fifo.h  FileNavi.cpp  FileNavi.h  I2SOutput.cpp  Kconfig.projbuild  MP3Player.cpp  MP3Player.h  Output.cpp  Output.h  SDCard.cpp  SDCard.h  _kiss_fft_guts.h  bt_app_core.cpp  bt_app_core.h  button_handling.h  defines.h  fft.cpp  font8x8_basic.h  kiss_fft.h  kiss_fftr.h  main.cpp  oled_display.h  rgb_led_displays.h  ssd1306.h  ssd1306_i2c.cpp  ssd1306_i2c.h  ssd1306_spi.cpp  ssd1306_spi.h  utilities.h  ws2812.cpp  ws2812.h
